--- a/social/templates/ajax/add_comment.html
+++ b/social/templates/ajax/add_comment.html
@@ -11,10 +11,14 @@
             <span>{{ comment.created_at|timesince_filter }} ago</span>
             <!-- Nút Like và số lượt like -->
             <a href="#" class="like-btn" data-comment-id="{{ comment.id }}">
-                    Like
+                {% if comment.id in liked_comments_ids %}
+                    <i class="fa fa-heart" style="color: red"></i>
+                {% else %}
+                    <i class="fa fa-heart"></i>
+                {% endif %}
             </a>
             <span class="like-count">{{ comment.likes.count }}</span>
-            <a href="#" class="reply-btn" data-comment-id="{{ comment.id }}">Reply</a> <!-- Nút Reply -->
+            <a href="#" class="reply-btn" data-comment-id="{{ comment.id }}"><i class="fa fa-reply"></i></a> <!-- Nút Reply -->
         </div>
     </div>
 
@@ -24,7 +28,7 @@
             {% csrf_token %}
             <input type="hidden" name="post_id" value="{{ comment.post.id }}">
             <input type="hidden" name="parent_id" value="{{ comment.id }}">
-            <textarea name="content" placeholder="Write a reply..."></textarea>
+            <textarea class="comment-area" name="content" placeholder="Write a reply..."></textarea>
             <button type="submit" style="color: black">Reply</button>
         </form>
     </div>
