--- a/social/templates/ajax/get_post.html
+++ b/social/templates/ajax/get_post.html
@@ -99,6 +99,7 @@
                                     <input type="hidden" name="post_id" value="{{ post.id }}">
                                     <input type="hidden" name="user_id" value="{{ user.id }}">
                                     <textarea
+                                            class="comment-area"
                                             name="content"
                                             placeholder="Post your comment"></textarea>
 
