--- a/social/templates/social/edit-profile.html
+++ b/social/templates/social/edit-profile.html
@@ -6,90 +6,64 @@
 
 
 {% block content %}
-	<div class="container mt-5">
+
+    <div class="container mt-5">
         <h2 class="mb-4">Update user information</h2>
-        <form method="POST" enctype="multipart/form-data">
+        <form method="POST" enctype="multipart/form-data" class="c-form">
             {% csrf_token %}
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th scope="col">Fields</th>
-                        <th scope="col">Infos</th>
-                    </tr>
-                </thead>
-                <tbody>
+            <div class="mb-3">
+                <label for="first_name">First name</label>
+                {{ user_form.first_name }}
+                {% if user_form.first_name.errors %}
+                    <div class="text-danger">{{ user_form.first_name.errors }}</div>
+                {% endif %}
+            </div>
+            <div class="mb-3">
+                <label for="last_name">Last name</label>
+                {{ user_form.last_name }}
+                {% if user_form.last_name.errors %}
+                    <div class="text-danger">{{ user_form.last_name.errors }}</div>
+                {% endif %}
+            </div>
+            <div class="mb-3">
+                <label for="email">Email</label>
+                {{ user_form.email }}
+                {% if user_form.email.errors %}
+                    <div class="text-danger">{{ user_form.email.errors }}</div>
+                {% endif %}
+            </div>
 
-                    <tr>
-                        <td><label for="first_name">First name</label></td>
-                        <td>
-                            {{ user_form.first_name }}
-                            {% if user_form.first_name.errors %}
-                                <div class="text-danger">{{ user_form.first_name.errors }}</div>
-                            {% endif %}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label for="last_name">Last name</label></td>
-                        <td>
-                            {{ user_form.last_name }}
-                            {% if user_form.last_name.errors %}
-                                <div class="text-danger">{{ user_form.last_name.errors }}</div>
-                            {% endif %}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label for="email">Email</label></td>
-                        <td>
-                            {{ user_form.email }}
-                            {% if user_form.email.errors %}
-                                <div class="text-danger">{{ user_form.email.errors }}</div>
-                            {% endif %}
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
 
-            <h2 class="mb-4">Update profile</h2>
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th scope="col">Fields</th>
-                        <th scope="col">Infos</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><label for="avatar">Avatar</label></td>
-                        <td>
-                            {{ profile_form.avatar }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label for="background_image">Background</label></td>
-                        <td>
-                            {{ profile_form.background_image }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label for="phone">Phone</label></td>
-                        <td>
-                            {{ profile_form.phone }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label for="bio">Bio</label></td>
-                        <td>
-                            {{ profile_form.bio }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td><label for="gender">Gender</label></td>
-                        <td>
-                            {{ profile_form.gender }}
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+            <h2 class="my-4">Update profile</h2>
+            <div class="mb-3">
+                <label for="avatar">Avatar</label>
+                {% if profile_form.instance.avatar %}
+                    <img src="{{ profile_form.instance.avatar.url }}" alt="Current Avatar" width="100" height="100"><br>
+                {% endif %}
+                {{ profile_form.avatar }}
+            </div>
+            <div class="mb-3">
+                <label for="background_image">Background</label>
+                {% if profile_form.instance.background_image %}
+                    <img src="{{ profile_form.instance.background_image.url }}" alt="Current Background" width="100"
+                         height="100"><br>
+                {% endif %}
+                {{ profile_form.background_image }}
+            </div>
+
+            <div class="mb-3">
+                <label for="phone">Phone</label>
+                {{ profile_form.phone }}
+            </div>
+            <div class="mb-3">
+                <label for="bio">Bio</label>
+                {{ profile_form.bio }}
+            </div>
+            <div class="mb-3">
+                <label for="gender">Gender</label>
+                {{ profile_form.gender }}
+            </div>
+
 
             <div class="text-center button-container">
                 <button type="submit" class="btn btn-primary btn-lg me-2">Save</button>
