--- a/social/templates/ajax/created_post.html
+++ b/social/templates/ajax/created_post.html
@@ -4,113 +4,120 @@
 {% load static %}
 
 <div class="central-meta item">
-        <div class="user-post">
-            <div class="friend-info">
-                <figure>
-                    <img src="{{ post.user.profile.avatar.url }}" alt="">
-                </figure>
-                <div class="friend-name">
-                    <div class="more">
-                        <div class="more-post-optns"><i class="ti-more-alt"></i>
-                            <ul>
-                                {% if request.user == post.user %}
-                                    <li><i class="fa fa-pencil-square-o"></i><a href="{% url 'edit_post' post.id %}">Edit
-                                        Post</a></li>
-                                    <li><i class="fa fa-trash-o"></i><a href="{% url 'delete_post' post.id %}">Delete
-                                        post</a></li>
-                                {% else %}
-                                    <li class="bad-report"><i class="fa fa-flag"></i><a
-                                            href="{% url 'report_post' post.id %}">Report Post</a></li>
-                                {% endif %}
-
-
-                            </ul>
-                        </div>
-                    </div>
-                    <ins><a href="{% url 'user_profile' post.user.id %}" title="">{{ post.user.username }}</a>
-                    </ins>
-                    <span><i class="fa fa-globe"></i> published: {{ post.created_at }} </span>
-                </div>
-                <div class="post-meta">
-                    <p>
-                        {{ post.content }}
-                    </p>
-                    <figure>
-                        <div class="img-bunch">
-                            <div class="row">
-                                {% if post.images %}
-                                    <div class="col">
-                                        <figure>
-                                            <a href="#" title="" data-toggle="modal"
-                                               data-target="#img-comt" class="post-image" data-images='[
-                                                    {% for image in post.images.all %}
-                                                        "{{ image.image.url }}"{% if not forloop.last %}, {% endif %}
-                                                    {% endfor %}
-                                                ]'>
-                                                <img src="{{ post.images.all.0.image.url }}"
-                                                     alt="">
-                                            </a>
-                                        </figure>
-
-                                    </div>
-                                {% endif %}
-                            </div>
-                        </div>
-
-                    </figure>
-                    <div class="we-video-info">
+    <div class="user-post">
+        <div class="friend-info">
+            <figure>
+                <img src="{{ post.user.profile.avatar.url }}" alt="">
+            </figure>
+            <div class="friend-name">
+                <div class="more">
+                    <div class="more-post-optns"><i class="ti-more-alt"></i>
                         <ul>
+                            {% if request.user == post.user %}
+                                <li><i class="fa fa-pencil-square-o"></i><a href="{% url 'edit_post' post.id %}">Edit
+                                    Post</a></li>
+                                <li><i class="fa fa-trash-o"></i><a href="{% url 'delete_post' post.id %}">Delete
+                                    post</a></li>
+                            {% else %}
+                                <li class="bad-report"><i class="fa fa-flag"></i><a
+                                        href="{% url 'report_post' post.id %}">Report Post</a></li>
+                            {% endif %}
 
-                            <li>
-                                <div class="likes heart {% if post.id in liked_posts_ids %}happy{% endif %}"
-                                     title="Like/Dislike" data-post-id="{{ post.id }}">
-                                    ❤ <span class="like-count">{{ post.likes.count }}</span>
-                                </div>
-                            </li>
-                            <li>
-                            <span class="comment" title="Comments">
-                                <i class="fa fa-commenting"></i>
-                                <ins>{{ post.comments.count }}</ins>
-                            </span>
-                            </li>
 
-                            <li>
-
-                            </li>
                         </ul>
-
                     </div>
                 </div>
-                <div class="coment-area">
-                    <ul class="we-comet">
+                <ins><a href="{% url 'user_profile' post.user.id %}" title="">{{ post.user.username }}</a> {% if post.group %} in <a href="{% url 'group_detail' post.group.id %}">{{ post.group.name }}</a> {% endif %}
+                </ins>
+                <span><i class="fa fa-globe"></i> published: {{ post.created_at }} </span>
+            </div>
+            <div class="post-meta">
+                <p>
+                    {{ post.content }}
+                </p>
+                <figure>
+                    <div class="img-bunch">
+                        <div class="row">
+                            {% if post.images.all %}
+                                <div class="col">
+                                    <figure class="position-relative">
+                                        <a href="#" title="" data-toggle="modal"
+                                           data-target="#img-comt" 
+                                           class="post-image" 
+                                           data-images='[
+                                                {% for image in post.images.all %}
+                                                    "{{ image.image.url }}"{% if not forloop.last %}, {% endif %}
+                                                {% endfor %}
+                                            ]'>
+                                            <img src="{{ post.images.all.0.image.url }}" alt="">
+                                            
+                                            {% if post.images.all|length > 1 %}
+                                                <div class="multiple-images-indicator">
+                                                    <span class="badge bg-dark position-absolute bottom-0 end-0 m-2">
+                                                        <i class="fa fa-images"></i> +{{ post.images.all|length|add:"-1" }}
+                                                    </span>
+                                                </div>
+                                            {% endif %}
+                                        </a>
+                                    </figure>
+                                </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                </figure>
+                <div class="we-video-info">
+                    <ul>
 
-                        {% for comment in post.comments.all|root_comments %}
-                            {% include 'comments/comment_recursive.html' with comment=comment liked_comments_ids=liked_comments_ids %}
-                        {% endfor %}
-
-                        <li class="post-comment">
-                            <div class="comet-avatar">
-                                <img src="{{ user.profile.avatar.url }}"
-                                     alt="">
-                            </div>
-                            <div class="post-comt-box">
-                                <form class="comment-form" method="POST">
-                                    {% csrf_token %}
-                                    <input type="hidden" name="post_id" value="{{ post.id }}">
-                                    <input type="hidden" name="user_id" value="{{ user.id }}">
-                                    <textarea
-                                            class="comment-area"
-                                            name="content"
-                                            placeholder="Post your comment"></textarea>
-
-
-                                    <button type="submit" style="color: black">Add</button>
-                                </form>
+                        <li>
+                            <div class="likes heart {% if post.id in liked_posts_ids %}happy{% endif %}"
+                                 title="Like/Dislike" data-post-id="{{ post.id }}">
+                                ❤ <span class="like-count">{{ post.likes.count }}</span>
                             </div>
                         </li>
+                        <li>
+                        <span class="comment" title="Comments">
+                            <i class="fa fa-commenting"></i>
+                            <ins>{{ post.comments.count }}</ins>
+                        </span>
+                        </li>
+
+                        <li>
+
+                        </li>
                     </ul>
+
                 </div>
             </div>
+            <div class="coment-area">
+                <ul class="we-comet">
 
+                    {% for comment in post.comments.all|root_comments %}
+                        {% include 'comments/comment_recursive.html' with comment=comment liked_comments_ids=liked_comments_ids %}
+                    {% endfor %}
+
+                    <li class="post-comment">
+                        <div class="comet-avatar">
+                            <img src="{{ user.profile.avatar.url }}"
+                                 alt="">
+                        </div>
+                        <div class="post-comt-box">
+                            <form class="comment-form" method="POST">
+                                {% csrf_token %}
+                                <input type="hidden" name="post_id" value="{{ post.id }}">
+                                <input type="hidden" name="user_id" value="{{ user.id }}">
+                                <textarea
+                                        class="comment-area"
+                                        name="content"
+                                        placeholder="Post your comment"></textarea>
+
+
+                                <button type="submit" style="color: black">Add</button>
+                            </form>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
+
     </div>
+</div>
