--- a/social/templates/social/base.html
+++ b/social/templates/social/base.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/color.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.css">
 
 </head>
 <body>
@@ -540,7 +539,6 @@
 <script src="{% static 'js/toast-notificatons.js' %}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script><!-- For timeline slide show -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8c55_YHLvDHGACkQscgbGLtLRdxBDCfI"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js"></script>
 <!-- for location picker map -->
 {#<script src="{% static 'js/locationpicker.jquery.js' %}"></script><!-- for loaction picker map -->#}
 <script src="{% static 'js/map-init.js' %}"></script><!-- map initilasition -->
@@ -548,12 +546,6 @@
 {#	<script src="{% static 'js/page-tour-init.js' %}"></script>#}
 <script src="{% static 'js/script.js' %}"></script>
 
-<!-- add emoji -->
-<script>
-    //$(document).ready(function() {
-      //  $('.comment-area').emojioneArea()
-    //})
-</script>
 <script>
     window.csrftoken = '{{ csrf_token }}';
 </script>
@@ -733,8 +725,8 @@
 
             var $form = $(this);
             var postId = $form.find('input[name="post_id"]').val();
-            var emojioneAreaInstance = $form.find('textarea[name="content"]').data("emojioneArea");
-            var content = emojioneAreaInstance.getText();
+            var content = $form.find('textarea[name="content"]').val()
+
             console.log('content  ', content)
             $.ajax({
                 url: '{% url 'add_comment' %}',  // URL của view xử lý comment
@@ -757,11 +749,6 @@
                         var currentCount = parseInt($commentCount.text(), 10); // Lấy số đếm hiện tại
                         $commentCount.text(currentCount + 1); // Tăng số đếm lên 1
                         $form.find('textarea[name="content"]').val('');
-                        {#$('.comment-area').emojioneArea();#}
-                        {#$(".emojionearea-editor").text('');#}
-                        {#$(".emojionearea-editor").html('');#}
-                        emojioneAreaInstance.setText('');
-                        $form.find('textarea[name="content"]').val('')
 
                     }
                 },
