complete reset password

--- a/account/templates/account/password-reset-form.html
+++ b/account/templates/account/password-reset-form.html
@@ -1,46 +1,43 @@
 {% extends './base.html' %}
 
 {% block title %}
-    Forgot password
+    New Password
 {% endblock %}
 
 
-{% block content %}
+{% block form %}
     <!-- ============================ COMPONENT LOGIN   ================================= -->
-    <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
-        <div class="card-body">
+    
             <h4 class="card-title mb-4">New Password</h4>
-            <form method="POST">
+            <form class="we-form" method="POST">
                 {% csrf_token %}
-                <div class="form-group">
+                
                     {% load widget_tweaks %}
 
                     {% for f in form %}
-                        <div class="form-group">
-                            {% render_field f class='form-control' placeholder=f.label %}
-                        </div>
+                        
+                            {% render_field f placeholder=f.label %}
+                        
 
                     {% endfor %}
 
 
 
-                </div> <!-- form-group// -->
-
+                
 
                 {% if messages %}
-                    <div class="form-group">
+                   
                         {% for message in messages %}
                             <p href="#" class="alert alert-danger">{{ message }}</p>
                         {% endfor %}
-                    </div> <!-- form-group form-check .// -->
+                    
                 {% endif %}
 
-                <div class="form-group">
+                
                     <button type="submit" class="btn btn-primary btn-block"> Submit</button>
-                </div> <!-- form-group// -->
+                
             </form>
-        </div> <!-- card-body.// -->
-    </div> <!-- card .// -->
+    
 
     <p class="text-center mt-4">Don't have account? <a href="{% url 'user_register' %}">Sign up</a></p>
     <br><br>
