--- a/account/templates/account/password-reset-done.html
+++ b/account/templates/account/password-reset-done.html
@@ -5,32 +5,26 @@
 {% endblock %}
 
 
-{% block content %}
+{% block form %}
     <!-- ============================ COMPONENT LOGIN   ================================= -->
-    <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
-        <div class="card-body">
-            <h4 class="card-title mb-4">Forgot Password?</h4>
-            <form method="POST">
-                {% csrf_token %}
-                <div class="form-group">
-                    <p>Email already sent, check your mail</p>
-
-                </div> <!-- form-group// -->
+    
+            <h4 class="card-title mb-4">Email already sent, check your mail</h4>
+            
+                
+                
+                
 
 
                 {% if messages %}
-                    <div class="form-group">
+                    
                         {% for message in messages %}
                             <p href="#" class="alert alert-danger">{{ message }}</p>
                         {% endfor %}
-                    </div> <!-- form-group form-check .// -->
+                   
                 {% endif %}
 
 
-            </form>
-        </div> <!-- card-body.// -->
-    </div> <!-- card .// -->
-
+     
 
     <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
