--- a/social/templates/social/user_groups_list.html
+++ b/social/templates/social/user_groups_list.html
@@ -88,7 +88,7 @@
                                 <div class="card-body text-center">
                                     <h5>You haven't joined any groups yet</h5>
                                     <p class="text-muted">Create a new group or discover existing ones to get started!</p>
-                                    <a href="{% url 'discover_groups' %}" class="btn btn-primary">
+                                    <a href="{% url 'discover_groups' %}" class="">
                                         Discover Groups
                                     </a>
                                 </div>
