--- a/social/templates/social/timeline-about.html
+++ b/social/templates/social/timeline-about.html
@@ -38,7 +38,10 @@
                                             {{ user.profile.created_at }}
 										</p>
 
-										
+                                        <hr>
+                                        {% if request.user == user %}
+                                        	<a href="{% url 'delete_account' %}" class="btn btn-danger">Delete account</a>
+                                        {% endif %} 
 
 									</div>
 								</div>
