view mode for post

--- a/social/templates/social/index.html
+++ b/social/templates/social/index.html
@@ -131,6 +131,14 @@
                                             <!-- map -->
                                             <div id="us3"></div>
                                         </div>
+                                        <div class="visibility-options">
+                                            <label for="visibility">Visibility:</label>
+                                            <select name="visibility" id="visibility">
+                                                <option value="public">Public</option>
+                                                <option value="friends">Friends</option>
+                                                <option value="only_me">Only Me</option>
+                                            </select>
+                                        </div>
                                     </form>
                                 </div><!-- add post new box -->
 
