--- a/social/templates/partial/header.html
+++ b/social/templates/partial/header.html
@@ -93,6 +93,8 @@
                         <li><a href="{% url 'report_list' %}" title=""><i class="ti-target"></i>Reports ports</a></li>
                     {% endif %}
                     <li><a href="{% url 'user_groups_list' %}" title=""><i class="ti-settings"></i>Groups</a></li>
+                    <li><a href="{% url 'page_list' %}" title=""><i class="ti-settings"></i>Pages</a></li>
+
                     <li><a href="{% url 'user_logout' %}" title=""><i class="ti-power-off"></i>log out</a></li>
                 </ul>
             </div>
