--- a/social/templates/social/base.html
+++ b/social/templates/social/base.html
@@ -899,6 +899,39 @@
     });
 
 </script>
+<div class="modal fade" id="img-comt">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">×</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col">
+                        <div class="pop-image">
+                            <div class="pop-item">
+                                <img style="width: 100%" src="{% static 'images/resources/blog.jpg' %}"
+                                     alt="Image 1">
+                            </div>
+                            <div class="pop-item">
+                                <img style="width: 100%" src="{% static 'images/resources/blog2.jpg' %}"
+                                     alt="Image 2">
+                            </div>
+                        </div>
+                        <div class="button-container">
+                            <button class="prev-btn">Previous</button>
+                            <button class="next-btn">Next</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div><!-- The Scrolling Modal image with comment -->
 
 
 </body>
