--- a/social/templates/social/page_list.html
+++ b/social/templates/social/page_list.html
@@ -34,6 +34,7 @@
                                     <a href="{% url 'page_detail' page.id %}">
                                         {{ page.name }}
                                     </a>
+                                    <p><small class="text-muted">Created by {{ page.creator.username }}</small></p>
                                 </h5>
                                 <p class="text-muted mb-2">
                                     {{ page.description|truncatechars:100 }}
